--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
-    <button name="set-grid" type="button">Create New Grid</button>
+    <div class="container">
+      <button name="set-grid" type="button">Create New Grid</button>
+    </div>
     <div id="etch-a-sketch" class="container"></div>
   </body>
 </html>
