Restructure HTML to improve canvas resizing

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Etch-a-Sketch</title>
     <link href="css/style.css" rel="stylesheet" />
+    <script src="scripts/script.js" defer></script>
   </head>
   <body>
     <div class="container">
       <button name="set-grid" type="button">Create New Grid</button>
     </div>
-    <div id="etch-a-sketch" class="container"></div>
+    <div id="content" class="container">
+      <div id="etch-a-sketch" class="container"></div>
+    </div>
   </body>
 </html>
